# Copyright (c) Meta Platforms, Inc. and affiliates.
# All rights reserved.

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-incident-commander"
version = "0.2.0"
description = "AI Incident Commander - an OpenEnv RL environment for microservice outage triage"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
    "fastapi>=0.115.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.7.0",
    "requests>=2.31.0",
    "gradio>=4.44.0",
]

[project.optional-dependencies]
training = [
    "torch>=2.4.0,<2.6.0",
    "trl>=0.12.0,<0.14.0",
    "datasets>=2.20.0",
    "peft>=0.11.0",
    "accelerate>=0.33.0",
    "bitsandbytes>=0.43.0",
    "numpy>=1.26.0",
    "matplotlib>=3.8.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "openai>=1.40.0",
]

[project.scripts]
server = "incident_commander.server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["incident_commander", "incident_commander.server"]

[tool.setuptools.package-dir]
"incident_commander" = "."
"incident_commander.server" = "server"
